--- a/style.css
+++ b/style.css
@@ -2,59 +2,61 @@ html {
     font-family: "Roboto", "sans-serif"
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.header{
+.header {
     background-color: #1f2937;
 }
 
 /* Nav */
 
-.container, .hero{
+.container,
+.hero {
     max-width: 1000px;
     margin: auto;
     display: flex;
     justify-content: space-between;
 }
 
-.container{
+.container {
     padding: 30px 0;
 }
 
-.logo{
+.logo {
     font-size: 24px;
     color: #f9faf8;
 }
 
-.nav{
+.nav {
     display: flex;
     gap: 20px;
 }
 
-.nav__link, .text{
+.nav__link,
+.text {
     font-size: 18px;
     color: #a5a7ab;
 }
 
 /* hero */
 
-.hero{
+.hero {
     display: flex;
     padding: 100px 0;
     flex: 1;
     gap: 50px;
 }
 
-.title{
+.title {
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
     margin: 0;
 }
 
-.button{
+.button {
     background-color: #3882f6;
     border-radius: 5px;
     border-style: none;
@@ -64,3 +66,38 @@ a{
     padding: 10px 30px;
 }
 
+/* information */
+.information {
+    max-width: 800px;
+    margin: auto;
+}
+
+.information_title, .paragraph{
+    text-align: center;
+}
+
+.information_title{
+    font-size: 36px;
+    color: #1f2937;
+    padding: 40px;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 50px;
+}
+
+.border {
+    width: auto;
+    height: 150px;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+    margin: auto;
+}
+
+.paragraph{
+    text-align: center;
+    font-size: 18px;
+    color: #a5a7ab;
+}
